--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
     "@clerk/nextjs": "^6.5.0",
     "@google/generative-ai": "^0.21.0",
     "@hookform/resolvers": "^3.9.1",
+    "@langchain/community": "^0.3.15",
+    "@langchain/core": "^0.3.18",
     "@prisma/client": "^5.14.0",
     "@radix-ui/react-accordion": "^1.2.1",
     "@radix-ui/react-alert-dialog": "^1.1.2",
@@ -63,12 +65,16 @@
     "cmdk": "^1.0.0",
     "date-fns": "^3.6.0",
     "embla-carousel-react": "^8.5.1",
+    "fs-extra": "^11.2.0",
     "geist": "^1.3.0",
+    "ignore": "^5.3.2",
     "input-otp": "^1.4.1",
     "lucide-react": "^0.460.0",
     "next": "^15.0.1",
     "next-themes": "^0.4.3",
     "octokit": "^4.0.2",
+    "openai": "^4.73.1",
+    "p-limit": "^6.1.0",
     "react": "^18.3.1",
     "react-day-picker": "^8.10.1",
     "react-dom": "^18.3.1",
@@ -76,6 +82,7 @@
     "react-resizable-panels": "^2.1.7",
     "recharts": "^2.13.3",
     "server-only": "^0.0.1",
+    "simple-git": "^3.27.0",
     "sonner": "^1.7.0",
     "superjson": "^2.2.1",
     "tailwind-merge": "^2.5.4",
@@ -86,6 +93,7 @@
   },
   "devDependencies": {
     "@types/eslint": "^8.56.10",
+    "@types/fs-extra": "^11.0.4",
     "@types/node": "^20.14.10",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
