--- a/package.json
+++ b/package.json
@@ -65,6 +65,7 @@
     "cmdk": "^1.0.0",
     "date-fns": "^3.6.0",
     "embla-carousel-react": "^8.5.1",
+    "framer-motion": "^11.12.0",
     "fs-extra": "^11.2.0",
     "geist": "^1.3.0",
     "ignore": "^5.3.2",
